fix background display problem on ios

--- a/src/main.css
+++ b/src/main.css
@@ -116,3 +116,12 @@ li {
 .tg-ru-icon:hover {
   fill: red;
 }
+
+/* Styles to fix background problem on ios */
+
+.main-bg {
+  background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+}
